--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="purple_for_item_enabled">#C141EF</color>
-    <color name="purple_for_item_disabled">#68C141EF</color>
+    <color name="purple_for_item_enabled">#ED41D5EF</color>
+    <color name="purple_for_item_disabled">#6841D5EF</color>
 </resources>
